Fix til scrollbars

--- a/src/main/webapp/Login/Login.css
+++ b/src/main/webapp/Login/Login.css
@@ -6,7 +6,7 @@
 .brugertable{
     margin: 20px auto;
     width: 250px;
-    overflow: scroll;
+    /*overflow: scroll;*/
 }
 
 th, td{
